资料修改；上传bugfix

--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -102,7 +102,7 @@ html.no-js
                                 a.dropdown-toggle(data-toggle='dropdown', href='')
                                     | #{User.name}
                                     i.fa.fa-angle-down
-                                ul.dropdown-menu.animated.fadeInDown
+                                ul.dropdown-menu
                                     li
                                         a(href='#{adminDir}/me')
                                             i.fa.fa-user
