--- a/views/server/content/add.jade
+++ b/views/server/content/add.jade
@@ -11,19 +11,18 @@ block content
                 if (categorys && categorys.length > 0)
                     .form-group
                         label 分类
-                        select.form-control(name='category')
+                        select.form-control.input-sm(name='category')
                             option(value='') 请选择
                             - each category in categorys
                                 option(value='#{category.id}')
                                     | #{category.name}
                 .form-group
                     label 图集
-                    //input#fileupload(type="file", name="files[]", multiple)
                     div
                         span.btn.btn-success.fileinput-button
                             i.glyphicon.glyphicon-plus
                             span 添加文件
-                            input#fileupload(data-url='/upload', type='file', name='files[]', multiple='multiple')
+                            input#fileupload(type='file', name='files[]', multiple='multiple')
                         #J_files
                         div#progress.progress.progress-striped
                             div.progress-bar.progress-bar-default
