--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -27,7 +27,7 @@ block content
                        
                 .form-group
                     label 分类
-                    select.form-control(name='category')
+                    select.form-control.input-sm(name='category')
                         option(value='') 请选择
                         - each category in categorys
                             if ((category._id + '') === (content.category + ''))
