--- a/views/server/me/item.jade
+++ b/views/server/me/item.jade
@@ -5,7 +5,7 @@ block content
         .col-md-12
             .panel.panel-primary
                 .panel-heading
-                    | 管理员资料信息
+                    | 我的信息
                 ul.list-group
                     li.list-group-item
                         .row
