--- a/views/server/content/edit.jade
+++ b/views/server/content/edit.jade
@@ -10,12 +10,14 @@ block content
                     input.form-control(name='title', value='#{content.title}')
                 .form-group
                     label 图集
-                    .gallery
+                    .gallery#J_gallery
                         if (content.gallery)
                             - each image in content.gallery
-                                img(src='#{image.url}')
-                                input(type='hidden', name='gallery', value='#{image._id}')
-                                a(href='#{adminDir}/file/#{image._id}/del') 删除
+                                .gallery-item(style='background-image:url(#{image.url})')
+                                    //img.gallery-image(src='#{image.url}')
+                                    input(type='hidden', name='gallery[]', value='#{image._id}')
+                                    a.gallery-remove.J_del(href='#{adminDir}/file/#{image._id}/del')
+                                        span.fa.fa-times-circle
                     span.btn.btn-success.fileinput-button
                         i.glyphicon.glyphicon-plus
                         span 添加文件
@@ -41,6 +43,13 @@ block content
                     textarea.form-control(name='content', rows='8') #{content.content}
                 input(type='hidden', name='_csrf', value='#{token}')
                 button.btn.btn-primary(type='submit') 提交
+    script#J_tmpl_gallery_item(type='x-tmpl-mustache')
+        .gallery-item(style='background-image:url({{url}})')
+            //img.gallery-image(src='{{url}}')
+            input(type='hidden', name='gallery[]', value='{{id}}')
+            a.gallery-remove.J_del(href='')
+                span.fa.fa-times-circle
+
 
 block foot-js
     script(src='/assets/plugins/upload/js/vendor/jquery.ui.widget.js')
@@ -55,6 +64,7 @@ block foot-js
     <script src="/assets/plugins/upload/js/jquery.fileupload-validate.js"></script>
 
     script.
+        
         $(function () {
             $('#fileupload').fileupload({
                 //url: '/upload',
@@ -69,15 +79,49 @@ block foot-js
                     $('#progress .progress-bar').css(
                         'width',
                         progress + '%'
-                    );
+                    ).text(progress + '%');
                 },
                 done: function (e, data) {
+                    $('#progress .progress-bar').addClass('progress-bar-success').css(
+                        'width',
+                        100 + '%'
+                    ).text('100%');
                     $.each(data.result.files, function (index, file) {
-                        console.log(file)
-                        //$('<img src="' + file.url + '"/>').appendTo(document.body);
-                        $('#J_files').append('<input type="hidden" name="gallery" value="' + file._id + '"/>');
-                        $('#J_preview').append('<img src="' + file.url + '"/>');
+                        var tmpl = $('#J_tmpl_gallery_item').html();
+                        var html = Mustache.render(tmpl, {
+                            url: file.url,
+                            id: file._id
+                        });
+                        $('#J_gallery').append(html);
                     });
                 }
+            });
+            //删除图集
+            $('#J_gallery').on('click', '.J_del', function(e) {
+                e.preventDefault();
+                var $this = $(this);
+                var $item = $this.closest('.gallery-item');
+                var confirm = BootstrapDialog.confirm('<p>确定删除图片吗</p><label><input type="checkbox"/> 同时删除原图</label>', function(val) {
+                    var $input = confirm.$modal.find('input');
+                    var checked = $input[0].checked;
+                    if(val) {
+                        if(checked) {
+                            var id = $this.siblings('input').val();
+                            var url = '/admin/file/' + id + '/del';
+                            $.post(url, {
+                                _csrf: '#{token}'
+                            }, function(json) {
+                                if(json.success) {
+                                    $item.remove();
+                                } else{
+                                    BootstrapDialog.alert('删除失败');
+                                }
+                            });
+                        } else {
+                            $item.remove();
+                        }
+                        
+                    }
+                });
             });
         });
