--- a/public/assets-admin/css/style.css
+++ b/public/assets-admin/css/style.css
@@ -1,14 +1,42 @@
 body{
     font-family: '微软雅黑' Monaco;
 }
-.gallery img{
-    max-width: 200px;
-    max-height: 200px;
-}
 .preview img{
     max-width: 200px;
     max-height: 200px;
 }
 a.btn-danger{
     color: #fff;
+}
+.gallery{
+    padding-bottom: 15px;
+}
+.gallery:after{
+    content: '';
+    clear: both;
+    display: table;
+}
+.gallery-item{
+    width: 200px;
+    height: 200px;
+    background-color: #f2f2f2;
+    background-size: cover;
+    float: left;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+    border: 2px solid #fff;
+    position: relative;
+}
+.gallery-item img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.gallery-remove{
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    font-size: 24px;
+    line-height: 0;
+    color: #fff !important;
 }
