--- a/public/assets-admin/css/style.css
+++ b/public/assets-admin/css/style.css
@@ -27,6 +27,10 @@ a.btn-danger{
     text-align: center;
     border: 2px solid #fff;
     position: relative;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
 }
 .gallery-item img{
     max-width: 100%;
@@ -38,5 +42,5 @@ a.btn-danger{
     top: 2px;
     font-size: 24px;
     line-height: 0;
-    color: #fff !important;
+    color: #000 !important;
 }
