--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -22,6 +22,8 @@ html
         block content
         script(src='/assets/js/vendor/jquery-2.1.1.min.js')
         script(src='/assets/plugins/bootstrap/js/bootstrap.min.js')
+        script(src='/assets/js/vendor/mustache.js')
+        script(src='/assets/js/vendor/moment-with-langs.js')
         block foot-js
         script.
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
