--- a/views/app/comment.jade
+++ b/views/app/comment.jade
@@ -16,7 +16,7 @@ block content
             
         .text-center
             if (pageInfo && pageInfo.totalPage > 1)
-                include ./page
+                include ./mixin
                 +pagination(pageInfo)
 block foot-js
     script.
