--- a/views/app/mixin.jade
+++ b/views/app/mixin.jade
@@ -39,3 +39,20 @@ mixin pagination(pageInfo)
         - query.page = nextPage
         li(class=(currentPage === totalPage) ? 'disabled' : '')
             a(href='?#{core.param(query)}') &raquo;
+//评论条目
+mixin commentItem(comment)
+    li.media
+        a.pull-left
+            - var avatar = gravatar.url(comment.email || '', {s: '40',r: 'x',d: 'retro'}, true)
+            img.media-object(src='#{avatar}')
+        .media-body
+            //h4.media-heading 标题
+            p #{comment.content}
+            .media-meta(data-id='#{comment._id}', data-reply='#{comment.reply || ""}')
+                | #{moment(comment.created).fromNow()} 
+                a.J_reply(href='javascript:') 回复
+            
+            //if(comment.comments)
+                ul.media-list
+                    each comment1 in comment.comments
+                        +item(comment1)
