--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -52,3 +52,8 @@ a.btn-danger{
     border-bottom: 5px solid;
     border-left: 5px solid transparent;
 }
+.media-list{
+    border-left: 4px solid #eee;
+    padding: 0px 15px;
+    margin: 10px 0;
+}
